# reflexsoar-agent-plugin-cookiecutter

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
src/reflex-agent/roles/{{ cookiecutter.role_package_name }}/: __init__.py  {{ cookiecutter.role_package_name }}.py
{{ cookiecutter.package_name }}/: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  mypy.ini  noxfile.py  pyproject.toml
{{ cookiecutter.package_name }}/src/reflex-agent/input/{{ cookiecutter.input_package_name }}/: __init__.py  {{ cookiecutter.input_package_name }}.py
{{ cookiecutter.package_name }}/src/reflex-agent/input/{{ cookiecutter.plugin_package_name }}/: __init__.py  {{ cookiecutter.plugin_package_name }}.py
{{ cookiecutter.package_name }}/src/reflex-agent/roles/{{ cookiecutter.plugin_package_name }}/: __init__.py  {{ cookiecutter.plugin_package_name }}.py
{{ cookiecutter.package_name }}/src/reflex-agent/roles/{{ cookiecutter.role_package_name }}/: {{ cookiecutter.role_package_name }}.py
